# ZSmile---Cuda

./: CMakeLists.txt  Codec.cu  Codec.cuh  Dictionary.cu  Dictionary.cuh  HashTable.cu  HashTable.cuh  Preprocess.cu  Preprocess.cuh  README.md  Text.cu  Text.cuh  main.cu  pattern.cu  utils.cu  utils.cuh
dictionaries/: 500k.dct  alphabet.txt  callgrind.out  large384.dct  result512_20_30.csv
dictionaries/csv/: 10k_buck.csv  10k_buck_huff.csv  10k_lib.csv  10k_lib_huff.csv  20k_buck.csv  20k_buck_huff.csv  20k_lib.csv  20k_lib_huff.csv  500k.csv  50k_buck.csv  50k_buck_huff.csv  50k_lib.csv  50k_lib_huff.csv  dictionaries.csv  large384.csv
dictionaries/intel-jam/: dictionary189_0_10.dct  dictionary189_10_20.dct  dictionary189_20_30.dct  dictionary512_0_10.dct  dictionary512_10_20.dct  dictionary512_20_30.dct  dictionaryNP189_0_10.dct  dictionaryNP189_10_20.dct  dictionaryNP189_20_30.dct
dictionaries/intel-jam/old/: dictionary158_0_10.dct  dictionary384_0_10.dct  dictionary384_10_20.dct  dictionary384_20_30.dct  dictionary_0_10_v_1.dct  dictionary_10_20_v_1.dct  dictionary_20_30_v_1.dct  dictionary_225k.dct
dictionaries/intel-jam/preliminary_result/: result158_0_10.csv  result189_0_10.csv  result189_10_20.csv  result189_20_30.csv  result512_0_10.csv  result512_10_20.csv  result_0_10_v1.csv  (+4 more)
dictionaries/original/: 10k_buck.dct  10k_lib.dct  20k_buck.dct  20k_lib.dct  50k_buck.dct  50k_lib.dct  dictionaries.csv  index_dict.txt
dictionaries/preprocessed/: 10k_buck.dct  10k_lib.dct  20k_buck.dct  20k_lib.dct  50k_buck.dct  50k_lib.dct  dictionaries.csv
